完成了搜索城市的功能

--- a/app/src/main/res/layout/activity_weather.xml
+++ b/app/src/main/res/layout/activity_weather.xml
@@ -41,7 +41,9 @@
 
                     <include layout="@layout/now" />
 
-                    <include layout="@layout/forecast" />
+                    <include layout="@layout/dforecast" />
+
+                    <include layout="@layout/hforecast"/>
 
                     <include layout="@layout/aqi" />
 
