--- a/app/src/main/res/layout/dforecast.xml
+++ b/app/src/main/res/layout/dforecast.xml
@@ -16,33 +16,13 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="15dp"
             android:layout_marginTop="15dp"
-            android:text="预报"
+            android:text="每日预报"
             android:textColor="#fff"
             android:textSize="20sp" />
-
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.7"
-            android:gravity="right"
-            android:textColor="#fff"
-            android:text="max"
-            android:layout_marginTop="15dp"/>
-
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.7"
-            android:layout_marginRight="15dp"
-            android:gravity="right"
-            android:textColor="#fff"
-            android:text="min"
-            android:layout_marginTop="15dp"/>
-
     </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/forecast_layout"
+        android:id="@+id/dforecast_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
