--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -3,14 +3,17 @@
 
     <item
         android:id="@+id/item_edit"
-        android:title="城市"/>
+        android:title="城市"
+        android:icon="@mipmap/edit"/>
 
     <item
         android:id="@+id/item_set"
-        android:title="设置"/>
+        android:title="设置"
+        android:icon="@mipmap/set"/>
 
     <item
         android:id="@+id/item_detail"
-        android:title="详细建议"/>
+        android:title="详细建议"
+        android:icon="@mipmap/information"/>
 
 </menu>
