--- a/app/src/main/res/layout/title.xml
+++ b/app/src/main/res/layout/title.xml
@@ -5,20 +5,31 @@
     android:layout_height="?attr/actionBarSize"
     android:background="#0000">
 
-
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-        <!--居中显示城市名-->
-        <TextView
-            android:id="@+id/title_city"
+
+
+        <!--&lt;!&ndash;设置按钮&ndash;&gt;-->
+        <!--<Button-->
+            <!--android:id="@+id/btn_set"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:background="#0000"-->
+            <!--android:text="设置"-->
+            <!--android:layout_alignParentRight="true"-->
+            <!--android:layout_centerVertical="true"-->
+            <!--android:textColor="#fff" />-->
+
+        <Button
+            android:id="@+id/btn_editCity"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:background="#0000"
+            android:text="城市"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
-            android:textColor="#fff"
-            android:textSize="15sp"
-            android:layout_marginRight="18dp"/>
+            android:textColor="#fff"/>
 
     </RelativeLayout>
 
